2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_alerts.js: fix the id for access to jquery
	in the field3.
	* godmode/alerts/configure_alert_action.php: fix the id for access to jquery
	in the event keyup.
	Fixes: 2845692

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add function "get_db_value_sql" for use in
	alert_list.php and in futures uses. This function returns the first column
	and first row from a query pass as parameters.
	* godmode/alerts/alert_list.php: fix bug that you can't add new alerts.
	Fixes: 2859264

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: change the method for test if a
	module is a numeric, and can normalize. Now obtain the ids from modules tipe
	that it's not proc or string, and this ids use to test.
	Fixes: 2849325

2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php: change (at the moment) the ajax for
	delete elements by html static form with select, because sometimes (when you
	try delete elements with bigger dimensions fail).
	Fixes: 2815063

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fix the pagination when it has
	a search, and fix the pagination and delete element in the page.
	Fixes: 2857846

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/exportdata.php, godmode/agentes/agent_manager.php,
	godmode/reporting/map_builder.php, godmode/reporting/graph_builder.php,
	godmode/alerts/alert_list.php: fix the bug that the div of autocomplete
	don't show.
	Fixes: 2856945

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/pandora.css, godmode/alerts/alert_list.php: minor fixes
	for styles warnings.

2009-09-14  Sancho Lerena <slerena@artica.es>

	* general/error_dbconfig.php, 
	  general/error_authconfig.php
	  general/error_emptyconfig.php: Error messages have it's own page.
