@@ -1,3 +1,8 @@
+2009-09-16  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* operation/events/events.php: cleanup the source code and add many
+	comments
+
 2009-09-15  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/javascript/pandora_alerts.js: fix the id for access to jquery
